# plant_capacity

./: README.md
data/: bboxes.csv
research_code/: README.md  __init__.py  add_pop.py  add_pop.sh  combine_watersheds.py  config.yaml  create_mm_validation_dataset.py  create_rasters.py  create_voronoi.py  create_voronoi.sh  download_pop.py  download_pop.sh  eu_comparison.py  find_intersection_river.sh  find_pop_in_danger_pop.py  find_pop_in_danger_pop.sh  find_unserved_pop.sh  hw_comparison.py  impact_polygons_pop.py  merge_seg_results_v2.py  merge_seg_results_v2.sh  pipelines.py  pop_differences_and_impact_polygons.sh  pyproject.toml  starter.py  verification_script.py
research_code/annotation_scripts/: NEW_01_GENERATEGRIDS.py  NEW_02_EXTRACTOSMDATAFULL_GEOJSON.py  NEW_03_WASTEWATERJOIN_GEOJSON.py  NEW_04_EXPORTGEOTIFF.py  annotations_inspection.py  annotations_inspection.sh  download_bing_annotate.py  grid_generation_and_osm_extract.sh  merge_annotations.py  merge_annotations.sh  run_download_bing_annotate_array.sh
research_code/data_merge/: combine_locations.py  combine_locations.sh  correct_locations_w_OSM.py  final_data_merge.py  merge_seg_results.py  merge_seg_results_v2.py  merge_seg_results_v2.sh
research_code/figures_scripts/: convert_voronoi_to_geojson_for_map.py  convert_voronoi_to_geojson_for_map.sh  piechart_figure.py  piechart_interactive.py
research_code/pop_at_risk_river_calculations/: assign_rivers_to_basin.py  assign_rivers_to_basin.sh  create_rasters.py  create_rasters.sh  find_diff_pop.py  find_intersection_river.py  find_intersection_river.sh  (+6 more)
(+16 files in other folders)
